--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 	},
 	"require": {
 		"twig/twig": "^3.0",
-		"twbs/bootstrap": "^5.3"
+		"twbs/bootstrap": "^5.3",
+		"vlucas/phpdotenv": "^5.6"
 	}
 }
