--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,10 @@
 {
 	"autoload": {
-		"classmap": ["src"]
+		"psr-4": {
+			"App\\": "src/",
+			"App\\Config\\": "src/config/",
+			"App\\Controllers\\": "src/controllers/"
+		}
 	},
 	"require": {
 		"twig/twig": "^3.0",
