--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,7 @@ name: Deploy to FTP (InfinityFree)
 on:
   push:
     branches:
-      - main
-      - test
+      - auto-deploy
 
 jobs:
   ftp-deploy:
