--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,10 @@ jobs:
       # Copiar Bootstrap directamente desde vendor después de composer install
       - name: Fix Bootstrap path
         run: |
+          if [ -d "public/assets/lib/twbs" ]; then
+          echo "Removing existing twbs directory..."
+          rm -rf public/assets/lib/twbs
+          fi
           mkdir -p public/assets/lib/twbs
           cp -R vendor/twbs/* public/assets/lib/twbs/
 
