add sleep to bootstrap path fix

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,9 @@ jobs:
       - name: Fix Bootstrap path
         run: |
           if [ -d "public/assets/lib/twbs" ]; then
-          echo "Removing existing twbs directory..."
-          rm -rf public/assets/lib/twbs
+            echo "Removing existing twbs directory..."
+            rm -rf public/assets/lib/twbs
+            sleep 10
           fi
           mkdir -p public/assets/lib/twbs
           cp -R vendor/twbs/* public/assets/lib/twbs/
