--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,14 +29,17 @@ jobs:
       # Copiar Bootstrap directamente desde vendor después de composer install
       - name: Fix Bootstrap path
         run: |
-          if [ -d "public/assets/lib/twbs" ]; then
+          if [ -L "public/assets/lib/twbs" ]; then
+            echo "Removing existing twbs symlink..."
+            unlink public/assets/lib/twbs || rm -f public/assets/lib/twbs
+          elif [ -d "public/assets/lib/twbs" ]; then
             echo "Removing existing twbs directory..."
             rm -rf public/assets/lib/twbs
-            sleep 10
+            sleep 2
           fi
+
           mkdir -p public/assets/lib/twbs
           cp -R vendor/twbs/* public/assets/lib/twbs/
-
       - name: Deploy via LFTP
         run: |
           lftp -e "
