change branch in yml

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -3,7 +3,7 @@ name: Generate Doxygen Docs and Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # O la rama que quieras usar para generar la documentación
+      - auto-deploy 
 
 jobs:
   generate-docs:
