--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -41,7 +41,9 @@ jobs:
           # Hacer commit y push de los cambios
           git add .
           git commit -m "Deploy Doxygen docs [skip ci]" || echo "No changes to commit"
-          git push origin gh-pages --force
+          
+          # 🔥 Push con el token de acceso
+          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/mgrl39/fungi.git gh-pages --force
 
       # ✅ Subir la documentación generada como artefacto (opcional)
       - name: Upload documentation artifact
