add autodocumentation of main

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -3,7 +3,7 @@ name: Generate Doxygen Docs and Deploy to GitHub Pages
 on:
   push:
     branches:
-      - auto-deploy
+      - main
 
 jobs:
   generate-docs:
