--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -26,13 +26,19 @@ jobs:
       # ✅ Generar documentación con Doxygen
       - name: Generate documentation with Doxygen
         run: |
+          rm -rf docs/ html/   # Limpiar cualquier resto anterior
           doxygen Doxyfile || { echo "❌ Doxygen generation failed"; exit 1; }
 
       # ✅ Verificar que `docs/` se generó correctamente
       - name: Check generated docs
         run: |
-          if [ ! -d "docs" ] || [ -z "$(ls -A docs)" ]; then
-            echo "❌ No documentation generated in docs/ folder."
+          if [ -d "docs" ] && [ "$(ls -A docs)" ]; then
+            echo "✅ Documentation generated in 'docs/'"
+          elif [ -d "html" ] && [ "$(ls -A html)" ]; then
+            echo "✅ Documentation generated in 'html/'"
+            mv html docs  # Si Doxygen generó en html, lo renombramos a docs
+          else
+            echo "❌ No documentation generated."
             exit 1
           fi
 
@@ -41,30 +47,33 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          
-          # Crear la rama gh-pages si no existe
+
+          # Si no existe la rama `gh-pages`, la crea como huérfana
           if ! git ls-remote --exit-code --heads origin gh-pages; then
             git checkout --orphan gh-pages
           else
             git fetch origin gh-pages
             git checkout gh-pages
           fi
-          
-          # Eliminar todo el contenido anterior si existe
-          if [ "$(git ls-files)" ]; then
-            git rm -rf . || true
-          fi
-          
-          # ✅ Copiar SOLO el contenido de `docs/` (sin la carpeta `docs/`)
-          shopt -s dotglob
-          cp -r docs/* ./
-          shopt -u dotglob
 
-          # ✅ Hacer commit y push de los cambios
+          # 🔥 Eliminar TODO el contenido anterior en gh-pages
+          git rm -rf . || true
+
+          # ✅ Copiar SOLO el contenido de `docs/` (sin la carpeta `docs/`)
+          if [ -d "docs" ]; then
+            shopt -s dotglob
+            cp -r docs/* ./
+            shopt -u dotglob
+          else
+            echo "❌ No documentation to copy."
+            exit 1
+          fi
+
+          # ✅ Commit y push de los cambios
           git add .
           git commit -m "Deploy Doxygen docs [skip ci]" || echo "✅ No changes to commit"
           
-          # ✅ Push usando el token de acceso personal
+          # ✅ Push usando el token personal
           git push --force "https://x-access-token:${{ secrets.GH_PAT }}@github.com/mgrl39/fungi.git" gh-pages
 
       # ✅ Subir la documentación generada como artefacto (opcional)
