--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
 		"psr-4": {
 			"App\\": "src/",
 			"App\\Config\\": "src/config/",
-			"App\\Controllers\\": "src/controllers/"
+			"App\\Controllers\\": "src/controllers/",
+			"App\\Controllers\\Api\\": "src/controllers/api/"
 		}
 	},
 	"require": {
